added travis file

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 # stimcellselector
 
 <!-- badges: start -->
+[![Travis build status](https://travis-ci.com/rohitfarmer/stimcellselector.svg?branch=master)](https://travis-ci.org/rohitfarmer/stimcellselector)
 <!-- badges: end -->
 
 The goal of stimcellselector is to ...
