--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,8 @@ knitr::opts_chunk$set(
 # stimcellselector
 
 <!-- badges: start -->
-[![Travis build status](https://travis-ci.com/rohitfarmer/stimcellselector.svg?branch=master)](https://travis-ci.org/rohitfarmer/stimcellselector)
+[![Travis build status](https://travis-ci.com/rohitfarmer/stimcellselector.svg?branch=master)](https://travis-ci.com/rohitfarmer/stimcellselector)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/rohitfarmer/stimcellselector?branch=master&svg=true)](https://ci.appveyor.com/project/rohitfarmer/stimcellselector)
 <!-- badges: end -->
 
 The goal of stimcellselector is to ...
