added code coverage and updated the readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,9 +17,18 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Travis build status](https://travis-ci.com/rohitfarmer/stimcellselector.svg?branch=master)](https://travis-ci.com/rohitfarmer/stimcellselector)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/rohitfarmer/stimcellselector?branch=master&svg=true)](https://ci.appveyor.com/project/rohitfarmer/stimcellselector)
+[![Codecov test coverage](https://codecov.io/gh/rohitfarmer/stimcellselector/branch/master/graph/badge.svg)](https://codecov.io/gh/rohitfarmer/stimcellselector?branch=master)
 <!-- badges: end -->
 
-The goal of stimcellselector is to ...
+The goal of this package is to select cells from stimulated samples that have responded to the stimulant in CyTOF/Flow cytometry stimulation assays. Starting from the identified cell populations either through automated clustering such as FlowSOM or traditional cell gating, the primary function `stim_cell_selector()` follows a heuristic approach to group cells into responding and non-responding. 
+
+For a combination of cell population and stimulation type (e.g., CD127+ T-helper cells and interferon-alpha), `stim_cell_selector()` starts by performing k-means clustering on the combined set of cells from stimulated and unstimulated samples. K-means clustering is performed on expression data of all the state markers combined. Upon clustering using a contingency table as drawn below, a Fisher's exact test determines the effect size and the statistical significance of partitioning. Cells form the combinations that pass the Fisher's exact test are considered as responding. An optional UMAP plot can also be generated to verify the cell partitioning in responding and non-responding groups visually.
+
+```{r con_table}
+matrix(nrow = 2, ncol = 2, dimnames = list(c("Cluster1", "Cluster2"), c("Stim", "Unstim")))
+```
+
+An optional UMAP plot can also be generated to verify the cell partitioning in responding and non-responding groups visually.
 
 ## Installation
 
@@ -37,20 +46,40 @@ devtools::install_github("rohitfarmer/stimcellselector")
 ```
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+An example using the sample CyTOF data set `chi11_1k` included in the package. 
+`suppressMessages()` is used to reduce the verbosity of the `stim_cell_selector`
+function.
 
 ```{r example}
 library(stimcellselector)
-## basic example code
+
+selected_data <- suppressMessages(stim_cell_selector(chi11_1k$expr_data, chi11_1k$state_markers,
+                  chi11_1k$cluster_col, chi11_1k$stim_label,
+                  chi11_1k$unstim_label, seed_val = 123, umap = TRUE, umap_cells = 50))
+
+class(selected_data)
+
+attributes(selected_data)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+### Output
 
-```{r cars}
-summary(cars)
+`stim_cell_selector()` returns a list with the selected expression data, a summary, data to plot stacked 
+bar plots to visualize the k-means and Fisher's exact test results and data to plot the optional UMAPs. 
+
+```{r head_expr}
+head(selected_data$selected_expr_data)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
+```{r head_summary}
+head(selected_data$summary)
+```
+```{r head_stacked}
+head(selected_data$stacked_bar_plot_data)
+```
+```{r head_umap}
+head(selected_data$umap_plot_data)
+```
 
 You can also embed plots, for example:
 
@@ -58,4 +87,5 @@ You can also embed plots, for example:
 plot(pressure)
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
+## Contact
+Rohit Farmer: [rohit.farmer@gmail.com](mailto:rohit.farmer@gmail.com)
