--- a/README.Rmd
+++ b/README.Rmd
@@ -12,11 +12,11 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# HDStIM <a href='https://github.com/niaid/HDStIM'><img src='man/figures/sticker.png' align="right" height = 200/></a>
+# HDStIM <img src='man/figures/sticker.png' align="right" height = 200 />
 
 
 <!-- badges: start -->
-[![Actions Status](https://github.com/niaid/HDStIM/workflows/R-CMD-check/badge.svg)](https://github.com/niaid/stimcellselector/actions?query=workflow%3AR-CMD-check)
+[![Actions Status](https://github.com/niaid/HDStIM/workflows/R-CMD-check/badge.svg)](https://github.com/niaid/HDStIM/actions?query=workflow%3AR-CMD-check)
 <!-- badges: end -->
 
 The goal of this package is to identify response to a stimulant in CyTOF/Flow cytometry stimulation assays by labeling cells as responded or not based on an unsupervised high dimensional approach. Starting from the annotated cell populations either through automated clustering such as FlowSOM or traditional cell gating, the primary function `HDStIM()` follows a heuristic approach to label cells as responding or non-responding. 
