--- a/vignettes/HDStIM.Rmd
+++ b/vignettes/HDStIM.Rmd
@@ -27,7 +27,7 @@ An optional UMAP plot can also be generated to verify the cell partitioning in r
 
 ## Example
 
-An example using the sample CyTOF data set `chi11_1k` included in the package. 
+An example using the sample CyTOF data set `chi11` included in the package. 
 `suppressMessages()` is used to reduce the verbosity of the `HDStIM`
 function.
 
@@ -36,9 +36,9 @@ library(HDStIM)
 suppressMessages(library(dplyr))
 suppressMessages(library(tibble))
 
-mapped_data <-  HDStIM(chi11_1k$expr_data, chi11_1k$state_markers,
-                  chi11_1k$cluster_col, chi11_1k$stim_label,
-                  chi11_1k$unstim_label, seed_val = 123, umap = TRUE, umap_cells = 500, verbose = FALSE)
+mapped_data <-  HDStIM(chi11$expr_data, chi11$state_markers,
+                  chi11$cluster_col, chi11$stim_label,
+                  chi11$unstim_label, seed_val = 123, umap = TRUE, umap_cells = 500, verbose = FALSE)
 
 class(mapped_data)
 
